--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
 
     input {
-      width: 100%;
+      width: 75%; /* Set width to 75% of the container */
       padding: 10px;
       margin: 10px 0;
       background: #16213e;
@@ -40,6 +40,7 @@
       border: none;
       border-radius: 5px;
       font-size: 1rem;
+      box-sizing: border-box; /* Ensure padding doesn't affect the width */
     }
 
     button {
@@ -80,9 +81,7 @@
     <div id="auth-section">
       <h1>Join a Chat Room</h1>
       <input type="text" id="username" placeholder="Enter your username">
-      <input type="text" id="room-code" placeholder="Enter room code or create one">
       <button id="create-room-btn">Create Room</button>
-      <button id="join-room-btn">Join Room</button>
     </div>
 
     <div id="chat-section" style="display:none;">
@@ -116,9 +115,7 @@
 
     // UI elements
     const usernameInput = document.getElementById("username");
-    const roomCodeInput = document.getElementById("room-code");
     const createRoomBtn = document.getElementById("create-room-btn");
-    const joinRoomBtn = document.getElementById("join-room-btn");
     const chatSection = document.getElementById("chat-section");
     const authSection = document.getElementById("auth-section");
     const chatBox = document.getElementById("chat-box");
@@ -146,18 +143,9 @@
       username = usernameInput.value.trim();
       if (!username) return alert("Please enter a username.");
 
-      roomId = roomCodeInput.value.trim() || Math.random().toString(36).substring(2, 8);
+      // Generate a room code and create a room
+      roomId = Math.random().toString(36).substring(2, 8);
       await setDoc(doc(db, "rooms", roomId), {});
-      roomTitle.textContent = roomId;
-      showChatSection();
-    });
-
-    // Join an existing room
-    joinRoomBtn.addEventListener("click", () => {
-      username = usernameInput.value.trim();
-      roomId = roomCodeInput.value.trim();
-      if (!username || !roomId) return alert("Please enter both a username and room code.");
-
       roomTitle.textContent = roomId;
       showChatSection();
       listenForMessages();
@@ -176,7 +164,7 @@
     // Function to send a message
     async function sendMessage() {
       const message = messageInput.value.trim();
-      if (!message) return;
+      if (!message) return; // Don't send if the message is blank
 
       // Add message to Firestore
       await addDoc(collection(db, "rooms", roomId, "messages"), {
