--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
     <div id="auth-section">
       <h1>Join a Chat Room</h1>
       <input type="text" id="username" placeholder="Enter your username">
+      <input type="text" id="room-code" placeholder="Enter room code">
       <button id="create-room-btn">Create Room</button>
+      <button id="join-room-btn">Join Room</button>
     </div>
 
     <div id="chat-section" style="display:none;">
@@ -97,7 +99,7 @@
   <script type="module">
     // Import Firebase functions
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-    import { getFirestore, doc, setDoc, addDoc, collection, onSnapshot, serverTimestamp, query, orderBy } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js";
+    import { getFirestore, doc, setDoc, addDoc, collection, onSnapshot, serverTimestamp, query, orderBy, getDoc } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js";
 
     // Firebase configuration
     const firebaseConfig = {
@@ -115,7 +117,9 @@
 
     // UI elements
     const usernameInput = document.getElementById("username");
+    const roomCodeInput = document.getElementById("room-code");
     const createRoomBtn = document.getElementById("create-room-btn");
+    const joinRoomBtn = document.getElementById("join-room-btn");
     const chatSection = document.getElementById("chat-section");
     const authSection = document.getElementById("auth-section");
     const chatBox = document.getElementById("chat-box");
@@ -138,6 +142,24 @@
       chatBox.innerHTML = "";
     }
 
+    // Listen for new messages
+    function listenForMessages() {
+      const q = query(collection(db, "rooms", roomId, "messages"), orderBy("timestamp"));
+      onSnapshot(q, (snapshot) => {
+        snapshot.docChanges().forEach((change) => {
+          if (change.type === "added") {
+            const { username, text } = change.doc.data();
+            const msgEl = document.createElement("p");
+            msgEl.textContent = `${username}: ${text}`;
+            chatBox.appendChild(msgEl);
+          }
+        });
+
+        // Keep the chat scrolled to the bottom
+        chatBox.scrollTop = chatBox.scrollHeight;
+      });
+    }
+
     // Create a new room
     createRoomBtn.addEventListener("click", async () => {
       username = usernameInput.value.trim();
@@ -146,6 +168,21 @@
       // Generate a room code and create a room
       roomId = Math.random().toString(36).substring(2, 8);
       await setDoc(doc(db, "rooms", roomId), {});
+      roomTitle.textContent = roomId;
+      showChatSection();
+      listenForMessages();
+    });
+
+    // Join an existing room
+    joinRoomBtn.addEventListener("click", async () => {
+      username = usernameInput.value.trim();
+      roomId = roomCodeInput.value.trim();
+
+      if (!username || !roomId) return alert("Please enter both a username and room code.");
+
+      const roomDoc = await getDoc(doc(db, "rooms", roomId));
+      if (!roomDoc.exists()) return alert("Room not found.");
+
       roomTitle.textContent = roomId;
       showChatSection();
       listenForMessages();
@@ -181,20 +218,6 @@
       // Clear input field after sending
       messageInput.value = "";
       chatBox.scrollTop = chatBox.scrollHeight; // Scroll to the latest message
-    }
-
-    // Listen for new messages
-    function listenForMessages() {
-      const q = query(collection(db, "rooms", roomId, "messages"), orderBy("timestamp"));
-      onSnapshot(q, (snapshot) => {
-        clearChatBox();
-        snapshot.forEach((doc) => {
-          const { username, text } = doc.data();
-          const msgEl = document.createElement("p");
-          msgEl.textContent = `${username}: ${text}`;
-          chatBox.appendChild(msgEl);
-        });
-      });
     }
 
     // Leave room
