--- a/index.html
+++ b/index.html
@@ -4,77 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat Room</title>
+  <link rel="shortcut icon" href="text.png" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
 
-  <!-- Dark Theme Styles -->
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #1a1a2e;
-      color: #e0e0e0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    #app {
-      width: 100%;
-      max-width: 500px;
-      padding: 20px;
-      background: #0f3460;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
-
-    input {
-      width: 75%; /* Set width to 75% of the container */
-      padding: 10px;
-      margin: 10px 0;
-      background: #16213e;
-      color: #e0e0e0;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-      box-sizing: border-box; /* Ensure padding doesn't affect the width */
-    }
-
-    button {
-      width: 48%;
-      padding: 10px;
-      margin: 5px 1%;
-      background: #1f4068;
-      color: #e0e0e0;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #1b1b2f;
-    }
-
-    #chat-box {
-      height: 300px;
-      overflow-y: scroll;
-      background: #16213e;
-      padding: 10px;
-      border-radius: 5px;
-      margin-bottom: 10px;
-    }
-
-    #message-input {
-      width: calc(100% - 60px);
-    }
-
-    #send-btn {
-      width: 50px;
-    }
-  </style>
 </head>
 <body>
   <div id="app">
