--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="app">
     <div id="auth-section">
-      <h1>Join a Chat Room</h1>
+      <h1>Chat Room</h1>
       <input type="text" id="username" placeholder="Enter your username">
       <input type="text" id="room-code" placeholder="Enter room code">
       <button id="create-room-btn">Create Room</button>
