--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="shortcut icon" href="img/text.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 
-  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
 </head>
@@ -30,7 +29,10 @@
     </div>
   </div>
 
-  <!-- Link to main.js -->
+  <div class="footer">
+    Made by <a href="https://sprintingsnail69.github.io/" target="_blank">SprintingSnail69</a>
+  </div>
+
   <script src="main.js" type="module"></script>
 </body>
 </html>
