fix again ARGGHHH

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       <h1>Chat Room</h1>
       <input type="text" id="username" placeholder="Enter your username">
       <input type="text" id="room-code" placeholder="Enter room code">
-      <input type="text" id="room-name" placeholder="Enter room name">
       <button id="create-room-btn">Create Room</button>
       <button id="join-room-btn">Join Room</button>
     </div>
@@ -30,6 +29,6 @@
   <div class="footer">
     Made by <a href="https://sprintingsnail69.github.io/" target="_blank">SprintingSnail69</a>
   </div>
-  <script src="main.js" type="module"></script>
+  <script src="main.js"></script>
 </body>
 </html>
