--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
   <title>Chat Room</title>
   <link rel="shortcut icon" href="img/text.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
+
 </head>
 <body>
   <div id="app">
     <div id="auth-section">
-      <h1>Chat Room</h1>
+      <h1>Join a Chat Room</h1>
       <input type="text" id="username" placeholder="Enter your username">
       <input type="text" id="room-code" placeholder="Enter room code">
       <button id="create-room-btn">Create Room</button>
       <button id="join-room-btn">Join Room</button>
     </div>
+
     <div id="chat-section" style="display:none;">
       <h2 id="room-title">Room: <span id="room-id"></span></h2>
       <div id="chat-box"></div>
@@ -26,9 +30,130 @@
       <button id="leave-room-btn">Leave Room</button>
     </div>
   </div>
-  <div class="footer">
-    Made by <a href="https://sprintingsnail69.github.io/" target="_blank">SprintingSnail69</a>
-  </div>
-  <script src="main.js"></script>
+
+  <!-- JavaScript Logic -->
+  <script type="module">
+    // Import Firebase functions
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+    import { getFirestore, doc, setDoc, addDoc, collection, onSnapshot, serverTimestamp, query, orderBy, getDoc } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js";
+
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDMGCzjVLZUVZHCCxBDql5npVz_wcKxEX4",
+      authDomain: "chat-room-eda59.firebaseapp.com",
+      projectId: "chat-room-eda59",
+      storageBucket: "chat-room-eda59.appspot.com",
+      messagingSenderId: "1063922969354",
+      appId: "1:1063922969354:web:c1693925c907a1681368f3"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // UI elements
+    const usernameInput = document.getElementById("username");
+    const roomCodeInput = document.getElementById("room-code");
+    const createRoomBtn = document.getElementById("create-room-btn");
+    const joinRoomBtn = document.getElementById("join-room-btn");
+    const chatSection = document.getElementById("chat-section");
+    const authSection = document.getElementById("auth-section");
+    const chatBox = document.getElementById("chat-box");
+    const messageInput = document.getElementById("message-input");
+    const sendBtn = document.getElementById("send-btn");
+    const leaveRoomBtn = document.getElementById("leave-room-btn");
+    const roomTitle = document.getElementById("room-id");
+
+    let roomId;
+    let username;
+
+    // Show chat section
+    function showChatSection() {
+      authSection.style.display = "none";
+      chatSection.style.display = "block";
+    }
+
+    // Clear chat box
+    function clearChatBox() {
+      chatBox.innerHTML = "";
+    }
+
+    // Listen for new messages
+    function listenForMessages() {
+      const q = query(collection(db, "rooms", roomId, "messages"), orderBy("timestamp"));
+      onSnapshot(q, (snapshot) => {
+        snapshot.docChanges().forEach((change) => {
+          if (change.type === "added") {
+            const { username, text } = change.doc.data();
+            const msgEl = document.createElement("p");
+            msgEl.textContent = `${username}: ${text}`;
+            chatBox.appendChild(msgEl);
+          }
+        });
+
+        // Keep the chat scrolled to the bottom
+        chatBox.scrollTop = chatBox.scrollHeight;
+      });
+    }
+
+    // Create a new room
+    createRoomBtn.addEventListener("click", async () => {
+      username = usernameInput.value.trim();
+      if (!username) return alert("Please enter a username.");
+
+      // Generate a room code and create a room
+      roomId = Math.random().toString(36).substring(2, 8);
+      await setDoc(doc(db, "rooms", roomId), {});
+      roomTitle.textContent = roomId;
+      showChatSection();
+      listenForMessages();
+    });
+
+    // Join an existing room
+    joinRoomBtn.addEventListener("click", async () => {
+      username = usernameInput.value.trim();
+      roomId = roomCodeInput.value.trim();
+
+      if (!username || !roomId) return alert("Please enter both a username and room code.");
+
+      const roomDoc = await getDoc(doc(db, "rooms", roomId));
+      if (!roomDoc.exists()) return alert("Room not found.");
+
+      roomTitle.textContent = roomId;
+      showChatSection();
+      listenForMessages();
+    });
+
+    // Send a message
+    sendBtn.addEventListener("click", sendMessage);
+
+    // Handle Enter key to send message
+    messageInput.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        sendMessage();
+      }
+    });
+
+    // Function to send a message
+    async function sendMessage() {
+      const message = messageInput.value.trim();
+      if (!message) return; // Don't send if the message is blank
+
+      // Add message to Firestore
+      await addDoc(collection(db, "rooms", roomId, "messages"), {
+        username,
+        text: message,
+        timestamp: serverTimestamp()
+      });
+
+      // Clear input field after sending
+      messageInput.value = "";
+    }
+
+    // Leave room
+    leaveRoomBtn.addEventListener("click", () => {
+      location.reload();
+    });
+  </script>
 </body>
 </html>
