--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
-  <link href="/assets/fontawesome/css/all.css" rel="stylesheet" />
+  <link href="assets/fontawesome/css/all.css" rel="stylesheet" />
 </head>
 <body><br><br><br>
-  <div id="app">
+  <div id="app" style="font-family: Inter;">
     <div id="auth-section">
       <h1>Classchat v2</h1>
       <div class="container2">
