--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body><br><br><br>
   <div id="app" style="font-family: Inter;">
     <div id="auth-section">
-      <h1>Classchat v2</h1>
+      <h1>Chat Room</h1>
       <div class="container2">
         <input type="text" id="username" placeholder="Enter your username">
         <input type="text" id="room-code" placeholder="Enter room code"><br>
@@ -26,7 +26,7 @@
 
     <div id="chat-section" style="display:none;">
       <h2 id="room-title">Room: <span id="room-id"></span></h2>
-      <center><p class="clicktocopy" style="margin-top: -10px;"><i>Click the code to copy it!</i></p></center>
+      <center><p class="clicktocopy" style="margin-top: -10px;"><i>Click the code to copy it!</i></p></center> 
       <div id="chat-box"></div>
       <input type="text" id="message-input" placeholder="Type your message...">
       <div class="container">
